# barista

./: -.js  .angular-cli.json  .bazelignore  .bazelrc  .dockerignore  .editorconfig  .eslintrc.json  .gitconfig  .gitignore  .nxignore  .prettierignore  .prettierrc  .snyk  .stylelintrc  BUILD.bazel  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Jenkinsfile  LICENSE  OWNERS  README.md  RELEASE.md  TSLINT.md  WORKSPACE  angular.json  changelog.json  codelyzer.json  coding_standards.json  commitlint.config.js  contributing.json  development.json  entrypoint.sh  gulpfile.js  index.ts  jest.config.js  jest.config.ts  migrations.json  (+22 more)
apps/barista-design-system/: .eslintrc.json  BUILD.bazel  jest.config.js  jest.config.ts  project.json  tsconfig.app.json  tsconfig.json  tsconfig.server.json  tsconfig.spec.json
apps/barista-design-system/src/: app.module.ts  app.ts  index.html  main.scss  main.server.ts  main.ts  polyfills.ts  server.ts
apps/components-e2e/: .eslintrc.json  BUILD.bazel  jest.config.js  jest.config.ts  project.json  tsconfig.app.json  tsconfig.e2e.json  tsconfig.json  tslint.json
apps/components-e2e/src/: BUILD.bazel  index.html  main.dev.ts  main.prod.ts  main.scss  main.ts  polyfills.ts  ui-test-app-module.ts
apps/design-system/: .eleventy.js  BUILD.bazel  component.njk  non-component-pages.njk  tsconfig.app.json  tsconfig.data.json  tsconfig.json
apps/design-system/_data/: categories.js  componentSidebar.js  components.js  navitems.js  nonComponentPages.js
apps/design-system/_scripts/: main.ts
apps/design-system/_styles/: _base.scss  _layouts.scss  _top-navigation.scss  _variables.scss  main.scss
apps/design-system/assets/: style.css
apps/design-system/src/: non-component-pages.njk
apps/figma-design-tokens/: BUILD.bazel  README.md  manifest.json  rollup.config.js  tsconfig.json
apps/figma-design-tokens/src/: code.ts  command-dispatcher.ts  environment.ts  styles.scss  test.css  ui.ts  worker.ts
environments/: BUILD.bazel  barista-environment.ci.ts  barista-environment.interface.ts  barista-environment.prod.ts  barista-environment.ts
libs/barista-components/: BUILD.bazel  config.bzl  index.ts  ng-package.json  package.json  project.json  tsconfig.json  tsconfig.lib.json
libs/barista-components/alert/: .eslintrc.json  BUILD.bazel  README.md  barista.json  index.ts  jest.config.js  jest.config.json  jest.config.ts  project.json  tsconfig.lib.json
libs/barista-components/assets/: BUILD.bazel
libs/barista-components/autocomplete/: .eslintrc.json  BUILD.bazel  README.md  barista.json  index.ts  jest.config.js  jest.config.json  jest.config.ts  project.json
libs/barista-components/bar-indicator/: .eslintrc.json  BUILD.bazel  README.md  barista.json  index.ts  jest.config.js  jest.config.json  jest.config.ts  project.json
libs/barista-components/breadcrumbs/: .eslintrc.json  BUILD.bazel  README.md  barista.json  index.ts  jest.config.js  jest.config.json  jest.config.ts  project.json
libs/barista-components/button-group/: .eslintrc.json  BUILD.bazel  README.md  (+6 more)
libs/examples/: .eslintrc.json  BUILD.bazel  README.md  jest.config.js  project.json  tsconfig.json  tsconfig.lib.json  tslint.json
libs/workspace/: .eslintrc.json  BUILD.bazel  README.md  builders.json  collection.json  config.bzl  dependencies.bzl  index.ts  jest.config.js  jest.config.ts  package.json  project.json  rollup.config.js  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json  tslint.json  webpack.config.js
tools/: BUILD.bazel  defaults.bzl  esm5.bzl  helpers.bzl  index.bzl  license-header.js  modify-tsconfig.js  ng_package.bzl  postinstall.js  rollup.config.js  tsconfig.tools.json  tslint.json
tools/barista/: Dockerfile  README.md  jest.config.js  tsconfig.json
tools/bazel_build_cache/: cache-write-key.json.enc  setup_ci_build_cache.sh
tools/bazel_rules/: BUILD.bazel  architect_macro.bzl  helpers.bzl  index.bzl  ng_module_macro.bzl  ng_ts_library_macro.bzl  stylelint_macro.bzl
tools/bitbucket-tools/: README.md  build.sh  cherrypicker.Dockerfile  nodemon.json  package.production.json  tsconfig.json  validator.Dockerfile
tools/build-cache/: cache-write-key.json.enc  rotate_keys.sh  rotator-key.json.enc  setup_ci_build_cache.sh
tools/builders/: builders.json  index.ts  jest.config.js  package.json  tsconfig.json
tools/cherry-picker/: Dockerfile  entrypoint.sh  package-lock.json  package.json  tsconfig.json
tools/design-tokens/: index.bzl
tools/docs/: docs-parser.ts  generate-docs.ts  tsconfig.json  types.ts
tools/environments/: barista-environment.interface.ts  barista-environment.prod.ts  barista-environment.ts
tools/examples/: tsconfig.json
tools/gulp/: build-config.ts  gulpfile.ts  tsconfig.json
tools/import-sort-style-dynatrace/: package.json  tsconfig.json
tools/linting/: index.js  index.ts  tsconfig.json  tslint-self.json  tslint.json
tools/ng_package/: BUILD.bazel  collect_typings.bzl  esm5.bzl  modify-tsconfig.js  ng_package.bzl  ng_sub_package.bzl  rollup.config.js
tools/pull-request-labeler/: .eslintrc.json  Dockerfile  jest.config.js  jest.config.ts  package-lock.json  package.json  project.json  tsconfig.json
tools/release/: changelog.ts  create-tag.ts  create-version.ts  get-release-version.ts  git-client.ts  jest.config.js  new-version-prompt.ts  parse-version.ts  publish-branch.ts  stage-release.ts  tsconfig.json
tools/schematics/: README.md  package.json  tsconfig.json
tools/scripts/: README.md  internal-link-checker.js  stylelint.js
tools/shareable-examples/: jest.config.js  tsconfig.spec.json
tools/shared/: jest.config.js
tools/shell-helpers/: copy-folder.js
tools/slack-release-notifier/: Dockerfile  entrypoint.sh  package-lock.json  package.json
tools/tslint-rules/: dtAnnotateInternalFieldsRule.ts  dtDocsImportBaristaRule.ts  dtDocumentPublicFieldsRule.ts  dtIconNamesRule.ts  dtNoFocusedTestsRule.ts  dtRequireLicenseBannerRule.ts  tsLoaderRule.js  tsconfig.json  utils.ts
tools/util/: ast.ts  is-public-build.ts
tools/workspace-plugin/: generators.json  package.json
(+8890 files in other folders)
