load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

package(default_visibility = ["//:__subpackages__"])

# Allow any ts_library rules in this workspace to reference the config
exports_files(
    [
        "tsconfig.json",
        "angular.json",
        # Stylelint and prettier config are neeeded for style linting
        ".stylelintrc",
        "prettier.config.js",
    ],
    visibility = ["//visibility:public"],
)

# Reformats files
buildifier(
    name = "buildifier",
)
