package(default_visibility = ["//:__subpackages__"])

# Allow any ts_library rules in this workspace to reference the config
exports_files(
    [
        "tsconfig.json",
        "angular.json",
        # Stylelint and prettier config are neeeded for style linting
        ".stylelintrc",
        "prettier.config.js",
    ],
    visibility = ["//visibility:public"],
)
