package(default_visibility = ["//:__subpackages__"])

# Allow any ts_library rules in this workspace to reference the config
exports_files(
    [
        "tsconfig.base.json",
        "angular.json",
        # Stylelint and prettier config are neeeded for style linting
        ".stylelintrc",
        "prettier.config.js",
        "jest.config.js",
    ],
    visibility = ["//visibility:public"],
)
