load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

exports_files(["rollup.config.js"])

# Custom ts_library compiler that runs tsc_wrapped with angular/compiler-cli statically linked
# This can be used with worker mode because we don't need the linker at runtime to make
# the angular plugin loadable
# Just a clone of @npm//@bazel/typescript/bin:tsc_wrapped with added deps
nodejs_binary(
    name = "tsc_wrapped_with_angular",
    data = [
        "@npm//@angular/compiler-cli",
        "@npm//@bazel/typescript",
    ],
    entry_point = "@npm//:node_modules/@bazel/typescript/internal/tsc_wrapped/tsc_wrapped.js",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "empty_node_modules",
    srcs = [],
)

nodejs_binary(
    name = "modify_tsconfig",
    data = ["modify-tsconfig.js"],
    entry_point = ":modify-tsconfig.js",
    node_modules = ":empty_node_modules",
    visibility = ["//visibility:public"],
)
