load("//tools/bazel_rules:index.bzl", "architect")
load("@npm_bazel_typescript//:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//apps/barista-design-system:__subpackages__"])

architect(
    name = "barista-design-system",
    data = glob(
        ["src/**/*"],
        exclude = [
            "src/**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ) + [
        "browserslist",
        "tsconfig.app.json",
        "tsconfig.server.json",
        "tsconfig.json",
        "@npm//@angular/cdk",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/localize",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
        "@npm//@angular/router",
        "@npm//@dynatrace/barista-fonts",
        "@npm//@dynatrace/barista-icons",
        "@npm//@nguniversal/express-engine",
        "@npm//d3-scale",
        "@npm//d3-shape",
        "@npm//highcharts",
        "@npm//highlight-ts",
        "@npm//lodash-es",
        "@npm//tslib",
        "@npm//zone.js",
        "//apps/barista-design-system/src/styles",
        "//libs/barista-components/autocomplete",
        "//libs/barista-components/breadcrumbs",
        "//libs/barista-components/button",
        "//libs/barista-components/core",
        "//libs/barista-components/form-field",
        "//libs/barista-components/icon",
        "//libs/barista-components/input",
        "//libs/barista-components/overlay",
        "//libs/barista-components/style",
        "//libs/barista-components/switch",
        "//libs/barista-components/tag",
        "//libs/barista-components/theming",
        "//libs/barista-components/toast",
        "//libs/examples",
        "//libs/shared/barista-definitions",
        "//libs/workspace",
    ],
    target = "barista-design-system:static-pages",
)
