load("//tools/bazel_rules:index.bzl", "architect", "stylelint")

package(default_visibility = ["//:__subpackages__"])

stylelint(
    name = "stylelint",
    srcs = glob(["**/*.scss"]),
)

# architect(
#     name = "barista-design-system",
#     data = glob(
#         ["src/**/*"],
#         exclude = [
#             "src/**/*.spec.ts",
#             "src/test-setup.ts",
#         ],
#     ) + [
#         "browserslist",
#         "tsconfig.app.json",
#         "tsconfig.base.json",
#         "@npm//@angular/cdk",
#         "@npm//@angular/localize",
#         "@npm//@angular/core",
#         "@npm//@angular/common",
#         "@npm//@angular/forms",
#         "@npm//@angular/platform-browser-dynamic",
#         "@npm//@angular/platform-browser",
#         "@npm//@angular/router",
#         "@npm//@dynatrace/barista-fonts",
#         "@npm//@dynatrace/barista-icons",
#         "@npm//highlight-ts",
#         "@npm//lodash-es",
#         "@npm//tslib",
#         "@npm//zone.js",
#         "@npm//d3-scale",
#         "@npm//d3-shape",
#         "@npm//highcharts",
#         "//libs/barista-components/autocomplete",
#         "//libs/barista-components/breadcrumbs",
#         "//libs/barista-components/button",
#         "//libs/barista-components/core",
#         "//libs/barista-components/core:core_scss_lib",
#         "//libs/barista-components/form-field",
#         "//libs/barista-components/icon",
#         "//libs/barista-components/input",
#         "//libs/barista-components/overlay",
#         "//libs/barista-components/style",
#         "//libs/barista-components/switch",
#         "//libs/barista-components/tag",
#         "//libs/barista-components/theming",
#         "//libs/barista-components/toast",
#         "//libs/examples",
#         "//libs/shared/design-tokens",
#         "//libs/shared/design-system/interfaces",
#         "//libs/shared/design-system/ui",
#     ],
#     target = "barista-design-system:build-frontend",
# )
