load("@npm//@bazel/typescript:index.bzl", "ts_config")

package(default_visibility = ["//apps/components-e2e:__subpackages__"])

exports_files([".stylelintrc"])

ts_config(
    name = "tsconfig-app",
    src = ":tsconfig.app.json",
    deps = [
        ":tsconfig.json",
        "//:tsconfig.base.json",
    ],
)
