load("//tools/bazel_rules:index.bzl", "eleventy")
load("@npm//@bazel/typescript:index.bzl", "ts_config")

package(default_visibility = ["//apps/design-system:__subpackages__"])

eleventy(
    name = "design-system",
    assets = [
        "//apps/design-system/src/scripts",
        "//apps/design-system/src/styles",
    ],
    data = ["//apps/design-system/src/data"],
    files = [
        "//libs/fluid-elements/button:README.md",
        "//libs/fluid-elements/checkbox:README.md",
        "//libs/fluid-elements/switch:README.md",
        "//libs/fluid-elements/tab-group:README.md",
    ],
    templates = [
        "src/component.njk",
        "src/non-component-pages.njk",
    ] + glob(["src/templates/**/*.njk"]),
)

ts_config(
    name = "tsconfig_app",
    src = "tsconfig.app.json",
    deps = [
        ":tsconfig.json",
        "//:tsconfig.base.json",
    ],
)

ts_config(
    name = "tsconfig_data",
    src = "tsconfig.data.json",
    deps = [
        ":tsconfig.json",
        "//:tsconfig.base.json",
    ],
)

# eleventy(
#     name = "serve",
#     templated_args = [
#         "--serve",
#         "--config apps/design-system/.eleventy.js"
#     ],
#     data = data
# )

# eleventy(
#     name = "build",
#     templated_args = [
#         "--config apps/design-system/.eleventy.js"
#     ],
#     data = data
# )
