load("@npm//ng-packagr:index.bzl", "ng_packagr")
load("@npm_bazel_typescript//:index.bzl", "ts_config", "ts_library")
load("//tools:index.bzl", "ng_package")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

package(default_visibility = ["//visibility:public"])

pkg_npm(
    name = "barista-components",
    deps = [
        "//libs/barista-components/core"
    ]
)

ts_library(
    name = "index",
    srcs = [":index.ts"],
    tsconfig = "tsconfig",
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig.json",
    ],
)

# ng_package(
#     name = "barista-components",
#     srcs = ["package.json"],
#     entry_point = ":index.ts",
#     deps = BARISTA_COMPONENTS_TARGETS,
# )

#         nodejs_binary(
#     entry_point = "@npm//:node_modules/ng-packagr/cli/main.js",
#     install_source_map_support = False,
#     data = ["@npm//ng-packagr:ng-packagr"] + kwargs.pop("data", []),
#     templated_args = ["--nobazel_patch_module_resolver"] + kwargs.pop("templated_args", []),
#     **kwargs
# )
