load("//libs/barista-components:config.bzl", "COMPONENT_TARGETS")
load("//tools/bazel_rules:index.bzl", "stylelint")
load("@npm//@bazel/typescript:index.bzl", "ts_config")

package(default_visibility = ["//:__subpackages__"])

filegroup(
    name = "examples",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ) + glob([
        "**/*.html",
        "**/*.scss",
    ]) + ["//libs/testing/fixtures"] + COMPONENT_TARGETS,
)

stylelint(
    name = "stylelint",
    srcs = glob(["**/*.scss"]),
    config = ":.stylelintrc",
)

ts_config(
    name = "tsconfig-lib",
    src = ":tsconfig.lib.json",
    deps = [
        ":tsconfig.json",
        "//:tsconfig.base.json",
    ],
)
