package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_config", "ts_library")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "nodejs_binary")
load(":config.bzl", "NPM_DEPENDENCIES")


# Additional to the compiled files we need the jsons files for execution
copy_to_bin(
    name = "copy_jsons",
    srcs = [
        "collection.json",
        "builders.json",
        "package.json",
    ] + glob(
        include = ["src/**/*.json"],
    ),
)

nodejs_binary(
    name = "affected_args",
    data = ["//libs/workspace"],
    entry_point = ":src/scripts/affected-args.bundled.js",
)

nodejs_binary(
    name = "run_parallel",
    data = ["//libs/workspace"],
    entry_point = ":src/scripts/run-parallel.bundled.js",
)

filegroup(
  name = "bundles",

)

rollup_bundle(
    name = "bundled",
    args = [
        "-e",
        ",".join(NPM_DEPENDENCIES),
    ],
    config_file = ":rollup.config.js",
    entry_points = {
        "src/scripts/affected-args.ts": "scripts/affected-args",
        "src/scripts/run-parallel.ts": "scripts/run-parallel",
        "src/builders/barista-build/builder.ts": "builders/barista-build/builder",
        "src/builders/barista-build/renderer.ts": "builders/barista-build/renderer",
        "src/builders/typescript/index.ts": "builders/typescript/index",
        "src/builders/packager/index.ts": "builders/packager/index",
        "src/builders/stylelint/index.ts": "builders/stylelint/index",
        "src/builders/design-tokens/build/index.ts": "builders/design-tokens/build/index",
        "src/builders/design-tokens/package/index.ts": "builders/design-tokens/package/index",
        "src/builders/elements/index.ts": "builders/elements/index",
    },
    format = "cjs",
    output_dir = True,
    sourcemap = "false",
    deps = [
        ":compile",
        "@npm//@rollup/plugin-json",
        "@npm//@rollup/plugin-node-resolve",
    ],
)

ts_library(
    name = "compile",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
          "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ),
    data = [":copy_jsons"],
    module_name = "@dynatrace/workspace",
    tsconfig = "tsconfig_lib",
    deps = ["@npm//" + dep for dep in NPM_DEPENDENCIES] + [
        "//libs/shared/node",
    ],
)

ts_config(
    name = "tsconfig_lib",
    src = "tsconfig.lib.json",
    deps = [
        "tsconfig.json",
        "//:tsconfig.json",
    ],
)
