package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin")

# Additionally to the compiled files we need the jsons files for execution
# copy_to_bin(
#     name = "copy_jsons",
#     srcs = [
#         "collection.json",
#         "builders.json",
#         "package.json",
#     ] + glob(
#         include = ["src/**/*.json"],
#     ),
# )

# ts_library(
#     name = "workspace",
#     srcs = glob(
#         include = ["src/**/*.ts"],
#         exclude = [
#             "**/*.spec.ts",
#             "src/test-setup.ts",
#         ],
#     ),
#     data = [":copy_jsons"],
#     module_name = "@dynatrace/workspace",
#     module_root = "src",
#     tsconfig = "tsconfig_lib",
#     deps = [
#         "//libs/shared/node",
#         "@npm//@angular-devkit/architect",
#         "@npm//@angular-devkit/build-ng-packagr",
#         "@npm//@angular-devkit/core",
#         "@npm//@angular/cli",
#         "@npm//@nrwl/workspace",
#         "@npm//@octokit/rest",
#         "@npm//@types/node",
#         "@npm//axios",
#         "@npm//chalk",
#         "@npm//d3-array",
#         "@npm//d3-cam02",
#         "@npm//d3-color",
#         "@npm//d3-hsluv",
#         "@npm//d3-scale",
#         "@npm//glob",
#         "@npm//lodash",
#         "@npm//memfs",
#         "@npm//rxjs",
#         "@npm//sass-graph",
#         "@npm//stylelint",
#         "@npm//theo",
#         "@npm//xml2js",
#         "@npm//xmlbuilder",
#         "@npm//yargs",
#     ],
# )

ts_config(
    name = "tsconfig_lib",
    src = "tsconfig.lib.json",
    deps = [
        "tsconfig.json",
        "//:tsconfig.json",
    ],
)
