load("@npm_angular_bazel//:index.bzl", "ng_module", "ng_package")
load("@npm_bazel_typescript//:index.bzl", "ts_config")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "button",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ),
    assets = [
        ":src/button.css",
    ] + glob(["src/**/*.html"]),
    # generate_ve_shims = True,
    module_name = "@dynatrace/barista-components/button",
    tsconfig = "tsconfig_lib",
    deps = [
        "//libs/barista-components/core",
        "//libs/barista-components/icon",
        "@npm//@angular/cdk",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//rxjs",
    ],
)

sass_library(
    name = "button_scss_lib",
    srcs = glob(
        ["src/**/_*.scss"],
    ),
)

sass_binary(
    name = "button_scss",
    src = "src/button.scss",
    deps = [":button_scss_lib"],
)

ts_config(
    name = "tsconfig_lib",
    src = "tsconfig.lib.json",
    deps = [
        "tsconfig.json",
        "//:tsconfig.json",
    ],
)
